# manager

./: Dockerfile  airflow.cfg  pyproject.toml
scripts/: entrypoint.sh
